# amm-rust

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.cargo/: config
.github/: renovate.json5
.github/workflows/: rust.yml
src/: get_random_int.rs  logger.rs  main.rs
