[package]
name = "amm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4"
rand = "0.9.0-alpha"
time = "0.3.36"
log4rs = { version = "1.3.0", features = ["console_appender"] }
log = "0.4.22"
goldberg = "0.1.0"
